fix: CardGroup spacing

--- a/packages/fuselage/src/components/CardGroup/CardGroup.styles.scss
+++ b/packages/fuselage/src/components/CardGroup/CardGroup.styles.scss
@@ -37,7 +37,7 @@
 }
 
 .rcx-card-group__item {
-  margin-inline: lengths.margin(4);
+  margin-inline: lengths.margin(8);
 
   &:first-of-type {
     margin-inline-start: lengths.margin(none);
@@ -45,14 +45,6 @@
 
   &:last-of-type {
     margin-inline-end: lengths.margin(none);
-  }
-
-  .rcx-card-group--small & {
-    margin-inline: lengths.margin(2);
-  }
-
-  .rcx-card-group--large & {
-    margin-inline: lengths.margin(8);
   }
 
   .rcx-card-group--wrap > & {
@@ -68,30 +60,6 @@
   .rcx-card-group--vertical & {
     margin-block: lengths.margin(4);
     margin-inline: lengths.margin(none);
-
-    &:first-child {
-      margin-block-start: lengths.margin(none);
-    }
-
-    &:last-child {
-      margin-block-end: lengths.margin(none);
-    }
-  }
-
-  .rcx-card-group--vertical.rcx-card-group--large > & {
-    margin-block: lengths.margin(8);
-
-    &:first-child {
-      margin-block-start: lengths.margin(none);
-    }
-
-    &:last-child {
-      margin-block-end: lengths.margin(none);
-    }
-  }
-
-  .rcx-card-group--vertical.rcx-card-group--small > & {
-    margin-block: lengths.margin(2);
 
     &:first-child {
       margin-block-start: lengths.margin(none);
